# cryptolake

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  cryptolake-fases-1-2.md  cryptolake-fases-3-4.md  cryptolake-fases-5-6.md  cryptolake-fases-7-8.md  cryptolake-general-guide.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  data-quality.yml
docker/airflow/: Dockerfile
docker/api/: Dockerfile
docker/dashboard/: Dockerfile
docker/spark/: Dockerfile  spark-defaults.conf
docs/: architecture.md  data_dictionary.md  setup_guide.md
docs/data_contracts/: bronze_historical_prices.yml  silver_daily_prices.yml
docs/diagrams/: architecture.mermaid
scripts/: health_check.py
src/config/: logging.py  settings.py
src/cryptolake.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ingestion/batch/: base_extractor.py  coingecko_extractor.py  fear_greed_extractor.py
src/ingestion/streaming/: binance_producer.py
src/orchestration/dags/: dag_full_pipeline.py
src/processing/batch/: api_to_bronze.py  bronze_to_silver.py  init_namespaces.py  silver_to_gold.py
src/processing/streaming/: binance_producer.py  kafka_to_bronze.py
src/quality/: __init__.py  run_quality_checks.py  validators.py
src/serving/api/: database.py  main.py
src/serving/dashboard/: app.py
src/transformation/dbt_cryptolake/: .gitignore  .user.yml  dbt_project.yml  profiles.yml
tests/: conftest.py
tests/unit/: test_schemas.py  test_validators.py
(+17 files in other folders)
